--- a/admin-login.html
+++ b/admin-login.html
@@ -303,8 +303,8 @@
         <div class="footer">
             <p>Default Credentials:</p>
             <p style="font-size: 0.8rem; color: #bbb; margin-top: 5px;">
-                Username: <strong>admin</strong><br>
-                Password: <strong>admin123</strong>
+                Username: <strong>S24</strong><br>
+                Password: <strong>S24</strong>
             </p>
             <p style="margin-top: 15px; font-size: 0.8rem;">
                 <a href="index.html">← Back to Voting Page</a>
@@ -315,8 +315,8 @@
     <script>
         // Default admin credentials (change these to your own!)
         const ADMIN_CREDENTIALS = {
-            username: 'admin',
-            password: 'admin123'
+            username: 'S24',
+            password: 'S24'
         };
 
         // Handle login form submission
