--- a/admin-login.html
+++ b/admin-login.html
@@ -310,8 +310,8 @@
     <script>
         // Default admin credentials (change these to your own!)
         const ADMIN_CREDENTIALS = {
-            username: 'admin',
-            password: 'admin123'
+            username: 'S24',
+            password: 'S24'
         };
 
         // Handle login form submission
